src/test/resources/typeSystemTestModels/valid/classes/ClassNoFinalSuperClass.java
package typeSystemTestModels.valid.classes;

public class ClassNoFinalSuperClass extends NonFinalClass {

}