src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/Capture.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

import java.io.InputStream;

public class Capture<T extends InputStream> {


}
